Primeira versao do Pep

--- a/LabBook.org
+++ b/LabBook.org
@@ -4107,133 +4107,21 @@ com <- k[k$use!='sem',]
 
 k$overhead <- sem$mean / com$mean;
 
+
+#max <- max(k$overhead);
+#max <- as.numeric(max);
+#k <- k[k$overhead==max,];
+
+#min <- min(k$overhead);
+#min <- as.numeric(min);
+#k <- k[k$overhead==min,];
+
+mean <- mean(k$overhead);
+mean
 #+end_src
 
 #+RESULTS:
-#+begin_example
-Error in eval(expr, envir, enclos) : object 'overhead' not found
-    versions threads use sampling      mean         se  overhead
-1       cg.B       1 com       50 25.528000 1.43858508 1.0197430
-2       cg.B       1 com      100 27.649667 2.01330993 0.9326333
-3       cg.B       1 com      150 26.099000 1.49657219 1.0180850
-4       cg.B       1 com      200 26.828333 1.32997647 0.9872026
-5       cg.B       1 sem       50 26.032000 1.66104915 0.9930221
-6       cg.B       1 sem      100 25.787000 2.17066055 0.9830968
-7       cg.B       1 sem      150 26.571000 1.84314518 0.9815343
-8       cg.B       1 sem      200 26.485000 1.92119884 0.9817293
-9       cg.B       8 com       50 26.273333 1.48762157 1.0295789
-10      cg.B       8 com      100 26.681333 1.57737849 1.0212855
-11      cg.B       8 com      150 26.896667 1.63746545 0.9556060
-12      cg.B       8 com      200 26.381000 1.46035141 0.9913738
-13      cg.B       8 sem       50 26.090000 1.47196631 0.9748456
-14      cg.B       8 sem      100 26.230333 1.32461847 0.9926405
-15      cg.B       8 sem      150 26.400000 1.42842691 1.0306516
-16      cg.B       8 sem      200 25.899000 1.37239007 0.9557312
-17      cg.B      16 com       50 25.581333 1.50091747 0.9624435
-18      cg.B      16 com      100 26.246333 2.00173157 0.9632697
-19      cg.B      16 com      150 27.030667 2.16036584 1.0314993
-20      cg.B      16 com      200 26.044667 1.74315157 0.9848438
-21      cg.B      16 sem       50 26.338000 1.62251682 1.0054828
-22      cg.B      16 sem      100 26.805000 1.63462856 1.0052320
-23      cg.B      16 sem      150 25.830667 1.51696812 0.9876340
-24      cg.B      16 sem      200 25.820000 1.53905703 0.9947178
-25      cg.B      24 com       50 27.033000 1.73065872 0.9870413
-26      cg.B      24 com      100 25.817000 1.78586180 1.0083426
-27      cg.B      24 com      150 26.110667 1.48024224 1.0125000
-28      cg.B      24 com      200 26.527333 2.06638211 1.0021658
-29      cg.B      24 sem       50 26.353000 1.86428380 0.9914087
-30      cg.B      24 sem      100 25.627000 1.93075230 0.9982570
-31      cg.B      24 sem      150 26.911000 1.82529602 1.0097408
-32      cg.B      24 sem      200 25.353000 1.33574245 1.0054008
-33      cg.B      32 com       50 27.070333 2.08599293 1.0077437
-34      cg.B      32 com      100 26.563000 1.64740683 0.9910591
-35      cg.B      32 com      150 25.990000 1.85032131 0.9950672
-36      cg.B      32 com      200 26.809667 1.89097374 0.9994511
-37      cg.B      32 sem       50 26.053667 1.49138803 0.9813777
-38      cg.B      32 sem      100 25.587333 1.66393671 1.0110837
-39      cg.B      32 sem      150 26.808667 1.73857833 0.9999153
-40      cg.B      32 sem      200 26.403333 1.89558361 1.0124232
-41      ft.B       1 com       50  7.842667 0.11362309 1.0449121
-42      ft.B       1 com      100  7.836333 0.15437404 0.9275446
-43      ft.B       1 com      150  7.898000 0.15627165 1.0192566
-44      ft.B       1 com      200  7.825000 0.14830595 1.0239232
-45      ft.B       1 sem       50  7.885667 0.16357651 0.9908467
-46      ft.B       1 sem      100  7.877333 0.19147846 0.9981474
-47      ft.B       1 sem      150  7.800333 0.15240475 0.9715569
-48      ft.B       1 sem      200  7.783667 0.09042982 0.9942471
-49      ft.B       8 com       50  7.948333 0.16180501 1.0320904
-50      ft.B       8 com      100  7.791333 0.15056949 0.9894004
-51      ft.B       8 com      150  7.840000 0.15164614 0.9969181
-52      ft.B       8 com      200  7.849333 0.13591021 0.9964879
-53      ft.B       8 sem       50  7.845333 0.16429620 0.9779507
-54      ft.B       8 sem      100  7.856333 0.14031111 0.9560919
-55      ft.B       8 sem      150  7.938000 0.16935415 0.9701851
-56      ft.B       8 sem      200  7.866333 0.12546589 0.9856962
-57      ft.B      16 com       50  7.915000 0.22610076 1.0166860
-58      ft.B      16 com      100  7.840667 0.11994769 1.0127187
-59      ft.B      16 com      150  7.870667 0.16943680 1.0082116
-60      ft.B      16 com      200  7.900000 0.15573851 0.9730002
-61      ft.B      16 sem       50  7.847000 0.14634265 1.0197430
-62      ft.B      16 sem      100  7.827000 0.12492605 0.9326333
-63      ft.B      16 sem      150  7.947333 0.25147537 1.0180850
-64      ft.B      16 sem      200  7.942667 0.19294773 0.9872026
-65      ft.B      24 com       50  7.877333 0.14395354 0.9930221
-66      ft.B      24 com      100  7.941000 0.19114005 0.9830968
-67      ft.B      24 com      150  7.906333 0.17278939 0.9815343
-68      ft.B      24 com      200  7.894667 0.16319694 0.9817293
-69      ft.B      24 sem       50  7.938333 0.19071056 1.0295789
-70      ft.B      24 sem      100  7.870000 0.17948201 1.0212855
-71      ft.B      24 sem      150  7.867333 0.17233048 0.9556060
-72      ft.B      24 sem      200  7.890333 0.16818391 0.9913738
-73      ft.B      32 com       50  7.911667 0.19968294 0.9748456
-74      ft.B      32 com      100  7.849333 0.14107909 0.9926405
-75      ft.B      32 com      150  7.872333 0.18888247 1.0306516
-76      ft.B      32 com      200  7.861667 0.15788964 0.9557312
-77      ft.B      32 sem       50  7.764333 0.09085437 0.9624435
-78      ft.B      32 sem      100  7.936333 0.18622835 0.9632697
-79      ft.B      32 sem      150  7.871667 0.16115799 1.0314993
-80      ft.B      32 sem      200  7.959333 0.23878543 0.9848438
-81      lu.B       1 com       50 37.013000 1.72974155 1.0054828
-82      lu.B       1 com      100 40.020000 2.62587168 1.0052320
-83      lu.B       1 com      150 37.493667 1.70552741 0.9876340
-84      lu.B       1 com      200 37.495000 1.72152423 0.9947178
-85      lu.B       1 sem       50 38.675333 1.53229019 0.9870413
-86      lu.B       1 sem      100 37.120333 1.85513517 1.0083426
-87      lu.B       1 sem      150 38.215667 2.06064788 1.0125000
-88      lu.B       1 sem      200 38.392000 1.42960211 1.0021658
-89      lu.B       8 com       50 38.347000 2.22812546 0.9914087
-90      lu.B       8 com      100 37.605333 2.20461901 0.9982570
-91      lu.B       8 com      150 38.005667 2.07021222 1.0097408
-92      lu.B       8 com      200 38.067667 1.97421814 1.0054008
-93      lu.B       8 sem       50 37.996000 1.79835419 1.0077437
-94      lu.B       8 sem      100 37.535667 1.73406221 0.9910591
-95      lu.B       8 sem      150 36.924667 1.72885296 0.9950672
-96      lu.B       8 sem      200 37.848667 2.23523048 0.9994511
-97      lu.B      16 com       50 37.716333 2.40309175 0.9813777
-98      lu.B      16 com      100 37.926000 2.23356971 1.0110837
-99      lu.B      16 com      150 38.072000 1.85453502 0.9999153
-100     lu.B      16 com      200 38.628667 2.12420276 1.0124232
-101     lu.B      16 sem       50 38.926667 2.39766668 1.0449121
-102     lu.B      16 sem      100 37.524000 1.47816494 0.9275446
-103     lu.B      16 sem      150 37.954667 2.09015462 1.0192566
-104     lu.B      16 sem      200 38.493000 2.08527505 1.0239232
-105     lu.B      24 com       50 38.776667 2.25000337 0.9908467
-106     lu.B      24 com      100 39.279000 3.36997115 0.9981474
-107     lu.B      24 com      150 39.152667 2.33614357 0.9715569
-108     lu.B      24 com      200 37.868667 1.81653197 0.9942471
-109     lu.B      24 sem       50 37.921667 1.79386315 1.0320904
-110     lu.B      24 sem      100 37.554333 1.91698993 0.9894004
-111     lu.B      24 sem      150 37.985333 1.70931307 0.9969181
-112     lu.B      24 sem      200 37.327000 1.74966587 0.9964879
-113     lu.B      32 com       50 37.716333 2.22177072 0.9779507
-114     lu.B      32 com      100 37.870667 1.53598015 0.9560919
-115     lu.B      32 com      150 37.873333 2.00369538 0.9701851
-116     lu.B      32 com      200 38.025000 2.73707184 0.9856962
-117     lu.B      32 sem       50 38.345667 1.94682908 1.0166860
-118     lu.B      32 sem      100 38.352333 1.91331254 1.0127187
-119     lu.B      32 sem      150 38.184333 2.65922260 1.0082116
-120     lu.B      32 sem      200 36.998333 1.82982932 0.9730002
-#+end_example
+: [1] 0.9947122
 
 
 #+begin_src R :results output graphics :file "imagens/exp5Overhead.pdf" :exports both :session *mmexp2* 
@@ -4264,9 +4152,6 @@ facet_wrap(~versions, ncol=1);
 
 #+RESULTS:
 [[file:imagens/exp5Overhead.pdf]]
-
-
-
 
 * TODO [11:25:11; 29.08.2016] Novo Experimento L2Cache e L3Cache na mesma Execução :Gabriel:
 - State "TODO"       from              [2016-08-31 Qua 14:01]
