--- a/producao/pep/References.bib
+++ b/producao/pep/References.bib
@@ -175,3 +175,11 @@ title = {{Measuring Hardware Counters for HPC Application Phase Detection}},
 year = {2016},
 publisher={XIV Workshop de Processamento Paralelo e Distribuído}
 }
+
+@inproceedings{psti,
+author = {Treibig, J. and Hager, G. and Wellein, G.},
+booktitle = {Proceedings of PSTI2010, the First International Workshop on Parallel Software Tools and Tool Infrastructures},
+title = {LIKWID: A lightweight performance-oriented tool suite for x86 multicore environments},
+year = {2010},
+address = {San Diego CA},
+}
