--- a/producao/pep/Dissertation.org
+++ b/producao/pep/Dissertation.org
@@ -254,69 +254,52 @@ Do as follows:
 
 * Introdução
 
-Na área de computação de alto desempenho (
-#+BEGIN_LaTeX
-\textit{High Performance Computing}
-#+END_LaTeX
-), o objetivo principal é obter o máximo de desempenho nas aplicações,
+Em computação de alto desempenho, o objetivo principal é obter o máximo de desempenho nas aplicações,
 utilizando de maneira eficiente os recursos de processamento, os quais
 podem estar em diferentes localidades (nós distribuídos) ou conectados
-por barramento (memória compartilhada) em uma 
-#+BEGIN_LaTeX
-\textit{Workstation}
-#+END_LaTeX
-. Além da eficiência de desempenho das aplicações, a eficiência
+por barramento (memória compartilhada) no mesmo nó. Além da eficiência de desempenho das aplicações, a eficiência
 energética é uma questão cada vez mais importante no
 cenário econômico atual, recursos computacionais de
 alta capacidade de processamento consomem muita energia para operar,
 dependendo do tipo de computação e da aplicação, esse consumo pode ser
 muito maior. Nisso, muitas pesquisas são realizadas para reduzir o
 consumo de energia, tanto a nível de processador, trabalhando com
-diferentes configurações de frequência para o processamento de
-aplicações (uso de DVFS), como também a nível de software, por exemplo
-com técnicas de balanceamento de carga, a fim de melhor distribuir a
+diferentes configurações de frequência para o processamento (uso de DVFS), como também a nível de software, utilizando técnicas de balanceamento de carga, a fim de melhor distribuir a
 computação entre os recursos de processamento.  
 
-Cada programa/aplicação possui aspectos peculiares, os quais definem
+Uma aplicação possui aspectos peculiares, os quais definem
 seu tipo, modelo e demais características de processamento. Além
 dessas características influenciarem o comportamento de uma aplicação,
-a plataforma de execução aonde a aplicação é executada influencia
-diretamente no seu comportamento. Aplicações memory-bound, por
-exemplo, definem uma classe de aplicações que possuem uma alta taxa de
-cache misses, fazendo com que ela seja limitada pelo acesso a
-memória em algumas partes da sua execução. Outras aplicações,
-realizam mais processamento e acessam a memória menos vezes, o que é o
-caso por exemplo das aplicações mais CPU-bound, as quais possuem um
+a plataforma de execução influencia
+diretamente no seu comportamento. Aplicações memory-bound são uma classe de aplicações que possuem alta taxa de
+cache misses, fazendo com que essas aplicações sejam limitadas pelo acesso a memória em alguns trechos de execução. Outras aplicações,
+realizam mais processamento e acessam a memória menos vezes, como é o
+caso das aplicações mais CPU-bound que possuem um
 IPC (
 #+BEGIN_LaTeX
 \textit{Instruction Per Cycle}
 #+END_LaTeX
-) maior que demais tipos de aplicações,
-dependendo da arquitetura alvo.
+) maior.
 
-Uma aplicação paralela é composta por várias regiões paralelas, as
-quais são executadas por threads distintas. Por exemplo, em uma
+As regiões paralelas de uma aplicação são executadas por threads distintas. Por exemplo, em uma
 aplicação que simula a troca de calor através de uma placa de metal é
-possível definir duas regiões paralelas: a primeira define uma
-condição inicial da placa metálica, outra realiza os cálculos de
-transferência de calor através dos diferentes pontos da placa, a fim
-de calcular o cálculo da troca de calor. Nesse exemplo, podemos
+possível definir duas regiões paralelas: a primeira determina uma
+condição inicial para a placa (matriz), outra realiza os cálculos de
+transferência de calor através dos diferentes pontos. Nesse exemplo, podemos
 visualizar que a segunda região é mais memory-bound do que a outra,
-visto que é efetuado o mesmo cálculo sobre diferentes dados em
-diferentes iterações, fazendo com que o registro da informação seja
-realizado e buscado antes do novo cálculo \cite{Morowsppd}. Portanto,
+pois é efetuado o mesmo cálculo sobre diferentes dados, dessa forma, o registro da informação é realizado e buscado antes do novo cálculo \cite{Morowsppd}. Portanto,
 em uma aplicação é possível ter diferentes comportamentos em uma
 granularidade mais fina, compreendendo o comportamento das diferentes
 regiões da aplicação. O objetivo do trabalho é detectar as regiões
 memory-bound de aplicações paralelas de maneira automática, em uma
-granularidade mais refinada das abordagens investigadas, de maneira
-que possa ser realizado um ajuste de frequência de processador
+granularidade refinada, diferente das abordagens investigadas, de maneira
+que possa ser realizado ajustes de frequência de processador
 utilizando a técnica 
 DVFS ( 
 #+BEGIN_LaTeX
 \textit{Dynamic Voltage and Frequency Scaling}
 #+END_LaTeX
-) para obter um consumo de energia nas fases mais memory-bound da
+) para reduzir o consumo de energia nas fases mais memory-bound da
 aplicação.
 
 O presente trabalho está organizado da seguinte maneira: no capítulo 2
@@ -685,7 +668,6 @@ processador, esse framework possui dois modos, o
 #+END_LaTeX
 permite que o usuário possa selecionar uma frequência específica.
 
-** Design of Experiments
 * Trabalhos Relacionados
 \label{chapter.relatedwork}
 
